--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-GOOGLE_API_KEY=AIzaSyBABLf75ZcG7H9wE7nxXK1yYjVPyZAKd1A
+GOOGLE_API_KEY=<GOOGLE_API_KEY>
 GCP_BUCKET_NAME=product-audit-bucket
-GOOGLE_APPLICATION_CREDENTIALS=C:/GCPKeys/jchhedamiscGCP.json
+GOOGLE_APPLICATION_CREDENTIALS=<YOUR google APP credentials>
 
 # Rate limiting (seconds to wait between API calls)
-API_DELAY_SECONDS=5
+API_DELAY_SECONDS=30
