Push the changes

--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ GOOGLE_APPLICATION_CREDENTIALS=<YOUR google APP credentials>
 
 # Rate limiting (seconds to wait between API calls)
 API_DELAY_SECONDS=30
+# Enable ClamAV MCP Server
+USE_MCP_CLAMAV=true
